[gd_scene load_steps=6 format=3 uid="uid://duxivcu2wlxs8"]

[ext_resource type="Script" path="res://Global/Audio/Sfx.gd" id="1_pvoua"]
[ext_resource type="AudioStream" uid="uid://qc1rsrp8n0lg" path="res://Global/Audio/click.mp3" id="2_k8xtd"]
[ext_resource type="Texture2D" uid="uid://yqk0yo1vdyr0" path="res://Global/Audio/sfx.png" id="2_pt3yr"]
[ext_resource type="Texture2D" uid="uid://b1lwpxok4gltd" path="res://Global/Audio/music.png" id="3_u15og"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_absmf"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0.501961)
border_width_left = 3
border_width_top = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_detail = 4

[node name="Sfx" type="Node"]
script = ExtResource("1_pvoua")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k8xtd")
bus = &"SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -34.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_absmf")

[node name="Control" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 4

[node name="SoundImage" type="TextureRect" parent="PanelContainer/Control"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_pt3yr")

[node name="SoundSlider" type="HSlider" parent="PanelContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -40.0
max_value = 0.0

[node name="MusicImage" type="TextureRect" parent="PanelContainer/Control"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_u15og")

[node name="MusicSlider" type="HSlider" parent="PanelContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -40.0
max_value = 0.0
